--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -131,11 +131,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -168,6 +168,7 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - run: make e2e-compile
+        working-directory: ${{ env.E2E_DIR }}
 
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
@@ -190,11 +191,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -282,11 +283,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -370,11 +371,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -456,11 +457,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -521,11 +522,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -602,11 +603,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -826,11 +827,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -949,11 +950,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -1045,11 +1046,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
