--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -131,11 +131,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -168,6 +168,7 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - run: make e2e-compile
+        working-directory: ${{ env.E2E_DIR }}
 
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
@@ -190,11 +191,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -282,11 +283,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -368,11 +369,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -433,11 +434,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -514,11 +515,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -768,11 +769,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -864,11 +865,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
