--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -106,11 +106,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -143,6 +143,7 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - run: make e2e-compile
+        working-directory: ${{ env.E2E_DIR }}
 
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
@@ -165,11 +166,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -257,11 +258,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -343,11 +344,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -408,11 +409,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -489,11 +490,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -785,11 +786,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -881,11 +882,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
